--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "dependencies": {
         "body-parser": "^1.15.2",
         "express": "^4.10.2",
+        "event-stream": "^3.3.4",
         "redis": "^2.6.3",
-        "socket.io": "^1.7.1"
+        "dsteem": "^0.8.7"
     },
     "main": "index.js",
     "scripts": {
